--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,15 @@
 @charset "utf-8";
-@import url("../webfonts/Devlys_010/stylesheet.css");
-@import url("../webfonts/Shiv02/stylesheet.css");
-@import url("../webfonts/AGRA/stylesheet.css");
+@import url("../webfonts/Kruti_Dev_640/stylesheet.css");
+@import url("../webfonts/Krutidev_100/stylesheet.css");
+
+
+
 html {
-	background-image: url(../images/background.jpg);
 	background-repeat: repeat;
 	background-size: 80px auto;
+	background-color: #D9DDF1;
 }
 /*
-html>body {
-  margin: 0;
-  padding: 0;
-  height: 100%;}
-  */
 # wapper #topwapper {
 	list-style-type: none;
 	padding-top: 0px;
@@ -23,7 +20,7 @@ html>body {
 	position: relative;
 	float:left;
 }
-
+/*
 a {
 	font-weight: bold;
 }
@@ -39,70 +36,132 @@ a:hover, a:active , a:focus{
 	color: #7F3300;
 	text-decoration: underline;
 }
+*/
+/* Start of navigation */
+#wapper # topwapper #mainnavigation  {
+    width: 100%;
+    background: #f0f0f0;
+    border: 1px solid #ccc;
+    border-right: none;
+}
 #mainnavigation ul {
+	/*overflow: hidden;*/
+    margin: 0;
+    padding: 0;
 	list-style-type: none;
 	z-index: 999;
+	/*width: 100%;*/
 }
 #mainnavigation ul li{
+	list-style: none;
 	float: left;
-	padding-right: 0px;
+	text-align: center;
+	/*border-left: 1px solid #fff;*/
+    /*border-right: 1px solid #ccc;*/
+	width: 14.2857%; /* fallback for non-calc() browsers */
+	box-sizing: border-box;
+	/*padding-right: 0px;*/
 	position: relative;
-	/*z-index: 999;*/
+	z-index: 999;
 	display: block;
-	padding-top: 0px;
+	/*padding-top: 0px;*/
 }
 #mainnavigation a {
-	width: 200px;
-	height: 50px;
-	display:table-cell;
-	vertical-align: middle; 
+	display: block;
+	text-decoration: none;
+	color: #FFF;
+	padding: 10px 0;
+	vertical-align: middle;
 	text-align: center;
 	background-color: #2E2E2E;
-	color: #FFFFFF;
+	font-weight: 500;
+	font-size: 2vw;
+	font-family: "Kruti Dev 640";
+	background-repeat: no-repeat;
+	background-image: url(../images/buttonBG.jpg);
 }
+#wapper #topwapper #mainnavigation {
+	font-family: "Kruti Dev 640";
+}
+#wapper #mainFooter {
+	display: block;
+	background-image: url(../images/repeatBG.jpg);
+	background-size: auto auto;
+	position: relative;
+	float: left;
+	width: 100%;
+	background-repeat: repeat-x;
+	font-family: "Krutidev 100";
+	font-style: italic;
+	text-align: center;
+	color: #FFFFFF;
+	font-weight: 500;
+	font-size: 1.5vw;
+	letter-spacing: 150%;
+}
+#wapper #bottomwapper {
+	float: left;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+@media (max-width: 800px) {
+#mainnavigation a {
+font-size: 1.7vw;
+}
+}
+
 #mainnavigation a:hover   , #mainnavigation a:active, #mainnavigation a:focus, #mainnavigation a.thispage{
 	text-decoration: none;
 	background-color: #43A6CB;
 }
-/*#topwapper #staticSection #mainnavigation {
-	padding-top: 6px;
-	padding-bottom: 6px;
-	width: 100%;
-	height: 100%;
-}*/
+
 #mainnavigation li {
-	border: 5px solid;
+	/*border: 5px solid;*/
 	/*border-color: #4B46C8;*/
 }
 #mainnavigation li > ul {
 	display: none;
 	position: absolute;
-	left: 0;
-	top: 100%;
+	/*left: 100%;*/
+	/*top: 100%;*/
 	/*border: 5px solid blue;*/
 }
+
 #mainnavigation li:hover > ul {
 	display: block;
 }
+
+#mainnavigation ul li > ul li {
+	/*padding-left: -20px;*/
+	position: relative;
+	/*left: -20%;*/
+	width: 100%;
+	z-index: 9999;
+	padding-top: 0px;
+}
+
 #mainnavigation li > ul li > ul {
 	left: 100%;
-	top: 0;
-	z-index: 9999;
+	top: 0%;
+	z-index: 9994;
+	width: 100%;
 }
+
 #mainnavigation li > ul li > ul li{
-	width: 200px;
-}
-#mainnavigation ul li > ul li {
-	padding-left: -20px;
+	width: 100%;
 	position: relative;
-	left: -20%;
-	width: 200px;
-	z-index: 9999;
-	/*padding-top: 0px;*/
+	left: 0%;
+	z-index: 9993;
 }
+
 #mainnavigation li:hover > a {
 	background-color: #43A6CB;
+	background-image: url(../images/hoverbuttonBG.jpg);
 }
+/* End of navigation */
 #slideshow   {
 	width:auto;
 	height:auto;
@@ -135,30 +194,31 @@ a:hover, a:active , a:focus{
 	margin-top: 10px;
 }
 
-#mainnavigation  {
-
-}
-
 #wapper #topwapper #mainheader {
 	text-align: center;
 	font-family: "Devlys 010";
 	line-height: 40%;
-	background-color: #86123E;
+	/*background-color: #86123E;*/
 	padding-top: 1px;
 	padding-bottom: 39px;
-	margin-right: -5px;
-	margin-bottom: 0px;
 	width: 100%;
 	position: relative;
 	float: left;
-	margin-left: -5px;
-	padding-left: 5px;
+	background-image: url(../images/headerBanner2.jpg);
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	padding-right: 0px;
+	margin-bottom: 0px;
+	margin-top: -7px;
+	margin-right: 6px;
 }
 .fixed {
 	position: fixed; 
 	top: 0; 
 	height: 0px; 
 	z-index: 9999;
+	width: 100%;
+	display: block;
 }
 
 #slideshow .cycle-overlay {
@@ -175,13 +235,13 @@ a:hover, a:active , a:focus{
 	/*min-width: 700px;*/
 	/*min-height: 500px;*/
 	width: auto;
-	height: auto;
+	height: 90%;
 	display: inline;
 	overflow: hidden;
 	position: relative;
 	padding-top: 2px;
-	max-width: 900px;
-	max-height: 550px;
+	/*max-width: 900px;
+	max-height: 550px;*/
 }
 
 #mainheader #subheader2 h1 {
@@ -201,7 +261,8 @@ a:hover, a:active , a:focus{
 	font-size: 1vw;
 	text-align: center;
 	display: block;
-	margin-bottom: 22px;
+	margin-top: -8px;
+	padding-bottom: 10px;
 }
 #mainheader #subheader1 h6 {
 	color: #FFF;
@@ -211,30 +272,24 @@ a:hover, a:active , a:focus{
 	font-size: 1vw;
 	text-align: center;
 	display: block;
-	margin-bottom: 5px;
-	margin-top: 25px;
+	margin-bottom: -13px;
+	margin-top: 6px;
+	font-family: "Kruti Dev 640";
 }
 #topwapper #mainheader #subheader1 {
-	padding-bottom: 2px;
+	padding-bottom: 0px;
 
 }
 #topwapper #mainheader #subheader2 {
 	display: block;
 	padding-bottom: 0px;
 	padding-top: 0px;
-	margin-bottom: -40px;
-	line-height: 2%;
-}
-
-#gcalender {
-	float: left;
-	width: auto;
-	height: auto;
-	position: relative;
-	display: block;
-	max-width: 900px;
-	max-height: 650px;
-	margin-left: 40px;
+	margin-bottom: -54px;
+	font-family: "Krutidev 100";
+	font-weight: 700;
+	font-size: x-large;
+	line-height: -23%;
+	text-align: center;
 }
 
 #articles {
@@ -257,4 +312,101 @@ h3 {
 #wapper {
 	width: 100%;
 	height: 100%;
+}
+
+/* new slideshow CSS
+@keyframes slidy {
+0% { left: 0%; }
+20% { left: 0%; }
+25% { left: -100%; }
+45% { left: -100%; }
+50% { left: -200%; }
+70% { left: -200%; }
+75% { left: -300%; }
+95% { left: -300%; }
+100% { left: -400%; }
+}
+body, figure { 
+  margin: 0; background: #101010;
+  font-family: Istok Web, sans-serif;
+  font-weight: 100;
+}
+*/
+#bottomwapper #captioned-gallery {
+	width: 65%;
+	overflow: hidden;
+	float: left;
+	position: relative;
+	margin-top: 2px;
+}
+
+@media (max-width: 800px) {
+#bottomwapper #captioned-gallery { 
+  width: 100%;
+}
+}
+
+/* New */
+.rslides {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+ /*height: 120%;*/
+  padding: 0;
+  margin: 0;
+  }
+
+.rslides li {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  display: none;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.rslides li:first-child {
+  position: relative;
+  display: block;
+  float: left;
+  }
+
+.rslides img {
+  display: block;
+  height: auto;
+  float: left;
+  width: 100%;
+  border: 0;
+  }
+  .caption {
+	position: absolute;
+	bottom: 0%;
+	background: rgba(0,0,0,0.9);
+	color: #BBC4F3;
+	width: 100%;
+	font-size: 2.5vw;
+	padding: .6rem;
+	margin-bottom: 0px;
+	font-family: "Krutidev 100";
+	font-weight: 500;
+  }
+/* End of responsive slideshow */
+/* Start of responsive Cal */
+#bottomwapper #gcalender {
+	float: left;
+	width: 33%;
+	height: auto;
+	position: relative;
+	display: block;
+	margin-left: 2px;
+	margin-top: 2px;
+}
+@media (max-width: 800px) {
+#bottomwapper #gcalender { 
+  width: 100%;
+}
+#gcalender #gcal {
+font-size: 2vw;
+}
 }
