--- a/css/submain.css
+++ b/css/submain.css
@@ -1,59 +1,87 @@
 @charset "utf-8";
+@import url("../webfonts/Krutidev_100/stylesheet.css");
+@import url("../webfonts/AGRA_TH/stylesheet.css");
+@import url("../webfonts/Kruti_Dev_640/stylesheet.css");
+
 /* CSS Document */
-#wapper{
+#subwapper{
 	width: 100%;
 	height: 100%;
-	background-color: red;
 	border: thick #000DFC 5px;
 	display: block;
 	-webkit-box-sizing: content-box;
 	-moz-box-sizing: content-box;
 	box-sizing: content-box;
 	position: relative;
+	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
-#wapper > div {
+#subwapper > div {
 	float: left;
 	position:relative;
-}
-
-#heading {
-	width: 100%;
-	height: 5%;
-	background-color:#ebd3d0;
-	border: thin red;
-	position: relative;
-	display: block;
-	text-align:center;
-	font-weight: 700;
-	font-size: 150%;
-	line-height: 150%;
-	color: #5b273c;
+	overflow: hidden;
 }
 
 #leftimgpart{
 	width: 100%;
 	height: 100%;
-	background-color: #d0e8eb;
 	border: thin black;
 	position: relative;
 	display: block;
+	background-image: url(../images/repeatarticleBGBlueLig.jpg);
+	background-repeat: repeat;
+	color: #0D1B3F;
+	overflow: hidden;
+}
+
+#leftimgpart > h1 {
+	font-family: "Krutidev 100";
+	margin-left: 1%;
+	margin-right: 1%;
+	overflow: hidden;
+	font-size: 2.5vw;
 }
 
 .textWrapRight {
-	float:right;
+	float: right;
 	margin: 10px;
+	width: 35%;
+	height: auto;
+	overflow: hidden;
+	border-width: 0.3vw;
+	border-style: groove;
 }
 
 .textWrapLeft {
 	float:left;
-	margin: 10px;	
+	margin: 10px;
+	width: 35%;
+	height: auto;
+	overflow: hidden;
+	border-width: 0.3vw;
+	border-style: groove;
 }
 
 .articleText {
-	font-weight: 600;
-	font-size: 150%;
-	line-height: 150%;
+	font-size: 1.7vw;
 	text-align: left;
-	color: #342D6E;
+	color: #2B0316;
+	font-family: "Krutidev 100";
+	font-weight: normal;
+	line-height: 110%;
+	letter-spacing: 105%;
+	margin-left: 2%;
+	margin-right: 2%;
+	font-variant: normal;
+	overflow: hidden;
+}
+
+pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+ overflow:hidden;
 }
