--- a/css/submain.css
+++ b/css/submain.css
@@ -4,6 +4,12 @@
 @import url("../webfonts/Kruti_Dev_640/stylesheet.css");
 
 /* CSS Document */
+body {
+	overflow: hidden;
+	width:100%;
+	height:100%;
+}
+
 #subwapper{
 	width: 100%;
 	height: 100%;
