--- a/css/submain.css
+++ b/css/submain.css
@@ -5,7 +5,7 @@
 
 /* CSS Document */
 body {
-	overflow: hidden;
+	overflow: auto;
 	width:100%;
 	height:100%;
 }
@@ -89,5 +89,5 @@ pre {
  white-space: -pre-wrap;      /* Opera 4-6 */
  white-space: -o-pre-wrap;    /* Opera 7 */
  word-wrap: break-word;       /* Internet Explorer 5.5+ */
- overflow:hidden;
+ overflow: hidden;
 }
