--- a/css/submain.css
+++ b/css/submain.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
-@import url("../webfonts/Krutidev_100/stylesheet.css");
-@import url("../webfonts/AGRA_TH/stylesheet.css");
-@import url("../webfonts/Kruti_Dev_640/stylesheet.css");
-
+@import url("../fonts/stylesheet.css");
 /* CSS Document */
 body {
 	overflow: auto;
@@ -42,7 +39,7 @@ body {
 }
 
 #leftimgpart > h1 {
-	font-family: "Krutidev 100";
+	font-family: "kruti_dev_700normal";
 	margin-left: 1%;
 	margin-right: 1%;
 	overflow: hidden;
@@ -73,7 +70,7 @@ body {
 	font-size: 1.7vw;
 	text-align: left;
 	color: #2B0316;
-	font-family: "Krutidev 100";
+	font-family: "kruti_dev_010regular";
 	font-weight: normal;
 	line-height: 110%;
 	letter-spacing: 105%;
