--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ a:hover, a:active , a:focus{
 	font-family: "kruti_dev_640normal";
 	background-repeat: no-repeat;
 	background-image: url(../images/buttonBG.jpg);
-	height: 5%;
+	height: 100%;
 }
 #wapper #topwapper #mainnavigation {
 	font-family: "kruti_dev_640normal";
@@ -127,28 +127,25 @@ font-size: 3vw;
 }
 
 #mainnavigation li {
-	/*border: 5px solid;*/
-	/*border-color: #4B46C8;*/
+	height: 100%;
 }
 #mainnavigation li > ul {
 	display: none;
 	position: absolute;
-	/*left: 100%;*/
-	/*top: 100%;*/
-	/*border: 5px solid blue;*/
+	height: 100%;
 }
 
 #mainnavigation li:hover > ul {
 	display: block;
+	height: 100%;
 }
 
 #mainnavigation ul li > ul li {
-	/*padding-left: -20px;*/
 	position: relative;
-	/*left: -20%;*/
 	width: 100%;
 	z-index: 9999;
 	padding-top: 0px;
+	height: 100%;
 }
 
 #mainnavigation li > ul li > ul {
@@ -156,6 +153,7 @@ font-size: 3vw;
 	top: 0%;
 	z-index: 9994;
 	width: 100%;
+	height: 100%;
 }
 
 #mainnavigation li > ul li > ul li{
@@ -163,6 +161,7 @@ font-size: 3vw;
 	position: relative;
 	left: 0%;
 	z-index: 9993;
+	height: 100;
 }
 
 #mainnavigation li:hover > a {
