--- a/css/main.css
+++ b/css/main.css
@@ -568,7 +568,7 @@ pre {
 
 #imagedesc h1 {
 	text-decoration: none;
-	color: red;
+	color: white;
 	text-align: center;
 	font-size: 4vw;
 	font-family: "kruti_dev_700normal";
