--- a/css/main.css
+++ b/css/main.css
@@ -62,12 +62,15 @@ a:hover, a:active , a:focus{
 	list-style: none;
 	float: left;
 	text-align: center;
+	/*border-left: 1px solid #fff;*/
+    /*border-right: 1px solid #ccc;*/
 	width: 14.2857%; /* fallback for non-calc() browsers */
 	box-sizing: border-box;
+	/*padding-right: 0px;*/
 	position: relative;
 	z-index: 999;
 	display: block;
-	height: 100%;
+	/*padding-top: 0px;*/
 }
 #mainnavigation a {
 	display: block;
@@ -82,7 +85,6 @@ a:hover, a:active , a:focus{
 	font-family: "kruti_dev_640normal";
 	background-repeat: no-repeat;
 	background-image: url(../images/buttonBG.jpg);
-	height: 100%;
 }
 #wapper #topwapper #mainnavigation {
 	font-family: "kruti_dev_640normal";
@@ -124,25 +126,28 @@ font-size: 3vw;
 }
 
 #mainnavigation li {
-	height: 100%;
+	/*border: 5px solid;*/
+	/*border-color: #4B46C8;*/
 }
 #mainnavigation li > ul {
 	display: none;
 	position: absolute;
-	height: 100%;
+	/*left: 100%;*/
+	/*top: 100%;*/
+	/*border: 5px solid blue;*/
 }
 
 #mainnavigation li:hover > ul {
 	display: block;
-	height: 100%;
 }
 
 #mainnavigation ul li > ul li {
+	/*padding-left: -20px;*/
 	position: relative;
+	/*left: -20%;*/
 	width: 100%;
 	z-index: 9999;
 	padding-top: 0px;
-	height: 100%;
 }
 
 #mainnavigation li > ul li > ul {
@@ -150,7 +155,6 @@ font-size: 3vw;
 	top: 0%;
 	z-index: 9994;
 	width: 100%;
-	height: 100%;
 }
 
 #mainnavigation li > ul li > ul li{
@@ -158,7 +162,6 @@ font-size: 3vw;
 	position: relative;
 	left: 0%;
 	z-index: 9993;
-	height: 100;
 }
 
 #mainnavigation li:hover > a {
@@ -313,7 +316,27 @@ h3 {
 
 #gcal {
 	position: relative;
+	font-family: "kruti_dev_700normal";
+	text-decoration: none;
+	font-weight: 700;
+	text-align: center;	/*font-size: 4vw;*/
 }
+
+#gcal h1{
+	font-size: 3vw;
+	color: #300745;
+}
+
+#gcal h4{
+	font-size: 2vw;
+	color: #672340;
+}
+
+#gcal h2{
+	font-size: 1.5vw;
+	color: #0D1435;
+}
+
 #wapper {
 	width: 100%;
 	height: 100%;
@@ -413,7 +436,10 @@ body, figure {
   width: 100%;
 }
 #gcalender #gcal {
-font-size: 2vw;
+	position: relative;
+	font-family: "kruti_dev_100regular";
+	text-decoration: none;
+	font-weight: 700vw;
 }
 }
 
@@ -515,71 +541,3 @@ pre {
 	/*font-variant: normal; */
 	overflow: hidden;
 }
-
-/* Lightbox style */
-
-#lightbox {
-    position:fixed; /* keeps the lightbox window in the current viewport */
-    top:0; 
-    left:0; 
-    width:100%; 
-    height:100%; 
-    /* background:url(overlay.png) repeat; */
-    background: rgba(0,0,0,.7);
-    /*text-align:center;*/
-   	z-index: 9999;
-}
-
-#lightbox p {
-    text-align:right; 
-    color:#fff; 
-    margin-right:20px; 
-    font-size:12px; 
-}
-
-#imagecontainer img {
-    box-shadow:0 0 25px #111;
-    max-width: 100%;
-	max-height: 100%;
-	display: block;
-	vertical-align: middle;
-	float: right;
-	margin-right: 3%;
-	
-}
-
-#imagecontainer {
-	position: relative;
-	float: left;
-	display: block;
-	width: 68%;
-	height: 100%;
-	text-align: right;
-}
-
-#imagedesc {
-	position: relative;
-	float: left;
-	display: block;
-	width: 28%;
-	height: 100%;
-	margin-right: 2%;
-}
-
-#imagedesc h1 {
-	text-decoration: none;
-	color: white;
-	text-align: center;
-	font-size: 3vw;
-	font-family: "kruti_dev_700normal";
-}
-
-#imagedesc h3 {
-	text-decoration: none;
-	color: white;
-	text-align: left;
-	font-size: 2vw;
-	font-family: "kruti_dev_010regular"
-}
-
-/* End of lightbox style */
