--- a/Content/Custom.css
+++ b/Content/Custom.css
@@ -11,7 +11,7 @@
     }
     .navbar-collapse {
         border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+        /*box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);*/
     }
     .navbar-collapse.collapse {
         display: none!important;
@@ -44,17 +44,105 @@
 
 @media screen and (max-width: 400px) {
     html{font-size: 30px;}
+    h1{ font-size: 3rem;}
+    h2{ font-size: 2.6rem;}
+    h3{ font-size: 2.2rem;}
+    h4{ font-size: 1.8rem;}
+    h5{ font-size: 1.6rem;}
+    h6{ font-size: 1.2rem;}
+    .navbar-brand {
+        font-size: 2.0rem;
+    }
+    p {
+        font-size: 2.0rem;
+        color: white;
+    }
+
+    .jumbotron h1, .jumbotron .h1 {
+        font-size: 3rem;
+    }
 }
 
 @media screen and (min-width: 400px) {
     html{font-size: 30px;}
+    h1{ font-size: 3rem;}
+    h2{ font-size: 2.6rem;}
+    h3{ font-size: 2.2rem;}
+    h4{font-size: 1.8rem;}
+    h5{ font-size: 1.6rem;}
+    h6{ font-size: 1.2rem;}
+    .navbar-brand {
+       font-size: 2.0rem;
+        color: white;
+    }
+
+    p {
+        font-size: 2.0rem;
+        color: white;
+    }
+    .jumbotron h1, .jumbotron .h1 {
+        font-size: 3rem;
+    }
 }
 
 @media screen and (min-width: 700px) {
-    html{font-size: 20px;}
+    html {font-size: 15px;}
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2.6rem }
+
+    h3 {
+        font-size: 2.2rem;
+    }
+
+    h4 {
+        font-size: 1.8rem;
+    }
+
+    h5 {
+        font-size:  1.6rem;
+    }
+
+    h6 {
+        font-size: 1.2rem;
+    }
+
+    .navbar-brand {
+        font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 2.0rem;
+        color: white;
+    }
+
+    .jumbotron h1, .jumbotron .h1 {
+        font-size: 3rem;
+    }
+}
+
 
 @media screen and (min-width: 1200px) {
-    html {font-size: 10px;}
+    html {font-size: 15px;}
+    h1{ font-size: 3rem;}
+    h2{ font-size:  2.6rem;}
+    h3{ font-size:  2.2rem;}
+    h4{ font-size: 1.8rem;}
+    h5{ font-size: 1.6rem;}
+    h6{ font-size:  1.4rem;}
+
+    p {
+        font-size: 1.8rem;
+        color: white;
+    }
+
+    .jumbotron h1, .jumbotron .h1 {
+        font-size: 3rem;
+    }
 }
 
 
@@ -65,9 +153,10 @@
 body {
     max-width: 100%;
     overflow-x: hidden;
-    padding-top: 66px;
+    padding-top: 75px;
     /*background: url(../images/repeatarticleBGBlueLig.jpg);*/
-    background-color: rgba(73, 84, 91, 1);
+    background-color: #49545b;
+    /*background-color: rgba(73, 84, 91, 1);*/
     background-repeat: repeat;
     background-attachment: fixed;
 }
@@ -88,7 +177,43 @@ section {
     font-family: 'Noto Sans', sans-serif;
     text-align: justify;
     word-wrap: break-word;
+    -moz-text-overflow: ellipsis;
     text-overflow: ellipsis;
+}
+
+label {
+	color: white;
+	font-family: 'Noto Sans', sans-serif;
+	text-align: justify;
+	font-size: 1.2rem;
+}
+
+.whiteText {
+    color: white;
+}
+
+.buttonLink { 
+	color: white;
+	background-color: #868e96;
+	border-color: #868e96;
+}
+
+.buttonLink:hover {
+ color:#fff;
+ background-color:#727b84;
+ border-color:#6c757d
+}
+.buttonLink.focus,.btn-secondary:focus {
+ box-shadow:0 0 0 3px rgba(134,142,150,.5)
+}
+.buttonLink.disabled,.btn-secondary:disabled {
+ background-color:#868e96;
+ border-color:#868e96
+}
+.buttonLink.active,.btn-secondary:active,.show>.btn-secondary.dropdown-toggle {
+ background-color:#727b84;
+ background-image:none;
+ border-color:#6c757d
 }
 
 /*General Editing*/
@@ -101,6 +226,8 @@ section {
     background: rgba(73, 84, 91, 0.84);
     /*49545B*/
     border: none;
+    -webkit-box-shadow: none;
+    -ms-box-shadow: none;
     box-shadow: none;
 }
 
@@ -163,12 +290,6 @@ section {
 
 /*jumbotron Editing*/
 
-/*.carousel-caption {
-    background: black;
-    position: inherit;
-    font-family: 'Noto Sans', sans-serif;
-}*/
-
 /*carousel Editing*/
 
 .carousel-inner{
@@ -177,22 +298,25 @@ overflow: hidden;
 
 .manCarousel, .new-caption-area {
     color: white;
-    background: rgba(73, 84, 91, 1);
+    background: #49545b;
+    /*background: rgba(73, 84, 91, 1);*/
     font-family: 'Noto Sans', sans-serif;
     text-align: center;
     font-size: 2vw;
-  }
+}
 
-.carousel-item {
-    height: 65vh;
+@media screen and (max-width: 600px){
+.carouselItem {
+    height: 86vh;
     min-height: 300px;
     background: no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    -ms-background-size: cover;
     background-size: cover;
 }
-
+}
 /*carousel Editing*/
 
 .parallax {
@@ -206,6 +330,7 @@ overflow: hidden;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    -ms-background-size: cover;
     background-size: cover;
 }
 
@@ -225,4 +350,6 @@ overflow: hidden;
 
 /*Model Editing*/
 
-.mb-4{margin-bottom:1.5rem!important}
+.mb-4 {
+    margin-bottom:1.5rem!important
+}
